setup: Squirrel でCRUD実装した
